HTML file with changes

--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trying git</title>
+    <style>
+        h1 {
+            color: brown;
+        }
+    </style>
 </head>
 <body>
+    <h1>
+        This wil help to track changes
+    </h1>
     Hello GIT!
 </body>
 </html>
