added git stages to publish

--- a/hello.html
+++ b/hello.html
@@ -15,5 +15,11 @@
         This wil help to track changes
     </h1>
     Hello GIT!
+    <ol>
+        <li>git add filename</li>
+        <li>git status</li>
+        <li>git commit -am "Description"</li>
+        <li>git push</li>
+    </ol>
 </body>
 </html>
