Added pull command

--- a/hello.html
+++ b/hello.html
@@ -21,5 +21,7 @@
         <li>git commit -am "Description"</li>
         <li>git push</li>
     </ol>
+    To get the latest version FROm the repository you can use 
+    git pull
 </body>
 </html>
