--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,9 @@
         h1 {
             color: brown;
         }
+        ol > li {
+            font-family: 'Courier New', Courier, monospace;
+        }
     </style>
 </head>
 <body>
