instructiuons for branches

--- a/hello.html
+++ b/hello.html
@@ -23,5 +23,11 @@
     </ol>
     To get the latest version FROm the repository you can use 
     git pull
+    <h1>Changing branches</h1>
+    <ul>
+        <li>Create branch: git checkout -b name_of_new branch</li>
+        <li>Check brach: git branch</li>
+        <li>Change branch: git chechout name</li>
+    </ul>
 </body>
 </html>
